--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
     "openai": "^4.96.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
